--- a/AppDica/MyMainApp/MyMainApp.csproj
+++ b/AppDica/MyMainApp/MyMainApp.csproj
@@ -124,7 +124,7 @@
     <Content Include="Login.aspx" />
     <Content Include="Logout.aspx" />
     <Content Include="Registro.aspx" />
-    <Content Include="TEC\TEC0001.aspx" />
+    <Content Include="TEC\TECC0001.aspx" />
     <Content Include="TEC\TEC0002.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -226,12 +226,12 @@
     <Compile Include="Registro.aspx.designer.cs">
       <DependentUpon>Registro.aspx</DependentUpon>
     </Compile>
-    <Compile Include="TEC\TEC0001.aspx.cs">
-      <DependentUpon>TEC0001.aspx</DependentUpon>
+    <Compile Include="TEC\TECC0001.aspx.cs">
+      <DependentUpon>TECC0001.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="TEC\TEC0001.aspx.designer.cs">
-      <DependentUpon>TEC0001.aspx</DependentUpon>
+    <Compile Include="TEC\TECC0001.aspx.designer.cs">
+      <DependentUpon>TECC0001.aspx</DependentUpon>
     </Compile>
     <Compile Include="TEC\TEC0002.aspx.cs">
       <DependentUpon>TEC0002.aspx</DependentUpon>
