--- a/AppDica/ClsDataApp/ClsDataApp.csproj
+++ b/AppDica/ClsDataApp/ClsDataApp.csproj
@@ -67,6 +67,7 @@
     <Compile Include="CCategoriaEscolaridad.cs" />
     <Compile Include="CCategoriaHabilidad.cs" />
     <Compile Include="CCentroEscolar.cs" />
+    <Compile Include="CConfMail.cs" />
     <Compile Include="CConsultoria.cs" />
     <Compile Include="CConsultoriaEntregable.cs" />
     <Compile Include="CDepartamento.cs" />
