--- a/.gitignore
+++ b/.gitignore
@@ -75,11 +75,15 @@ artifacts/
 *.scc
 *.cache
 *.pdb
-ClsDataApp.dll
-ClsDataSets.dll
-ClsInterface.dll
-MyMainApp.dll
 *.suo
+*.ClsDataApp.dll
+*.ClsDataSets.dll
+*.ClsInterface.dll
+*.MyMainApp.dll
+*.ClsDataApp.pdb
+*.ClsDataSets.pdb
+*.ClsInterface.pdb
+*.MyMainApp.pdb
 
 # Chutzpah Test files
 _Chutzpah*
